[XForms] xforms-link-exception in model should trigger fatal error dialog. Bug 332604, r=aaronr+me, patch by sspeiche@us.ibm.com